Добавлены блоки Команда, Сервисы, Интересные факты, Работы

--- a/code/index.jade
+++ b/code/index.jade
@@ -7,5 +7,9 @@ html(lang="ru")
 		include parts/_mainScreen
 		include parts/_about
 		include parts/_skils
+		include parts/_team
+		include parts/_service
+		include parts/_fun
+		include parts/_works
 		//- include parts/_body
 		include parts/_footer
