--- a/code/parts/_head.jade
+++ b/code/parts/_head.jade
@@ -1,6 +1,6 @@
 head
 	title Landing page for Fe
-	+styles('../css/style.css')
+	+styles('../css/style.css', 'https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css')
 
 	+script('https://code.jquery.com/ui/1.11.3/jquery-ui.min.js', 'https://code.jquery.com/jquery-1.10.2.js')
 
