--- a/css/_about.less
+++ b/css/_about.less
@@ -1,70 +1,3 @@
-.content_block{
-	// width: 90%;
-	// margin: 0 auto;
-	padding-top: 13rem;
-	padding-bottom: 5rem;
-
-	.tit{
-		display: block;
-		max-width: 90%;
-		margin: 0 auto;
-
-		&:after{
-			content: "";
-			display: block;
-			width: 100%;
-			clear: both;
-		}
-
-		h1{
-			.latoBold;
-			font-size: 3rem;
-			text-transform: uppercase;
-			color: @blue;
-			margin: 0;
-
-			i{
-				color: @orange;
-				font-style: normal;
-			}
-		}
-
-		p{
-			.lato;
-			font-size: 1.8rem;
-			color: @gray;
-			font-style: italic;
-		}
-
-		.descript{
-			display: inline-block;
-			// margin: 0 4rem;
-			margin-left: 7rem;
-			vertical-align: text-top;
-			float: right;
-			max-width: 60rem;
-			box-sizing: border-box;
-
-			img{
-				margin-right: 3rem;
-				float: left;
-				position: relative;
-	    		top: -5rem;
-			}
-
-			p{
-				.lato;
-				font-style: normal;
-				font-size: 1.6rem;
-				line-height: 125%;
-				// max-width: 70rem;
-			}
-		}
-	}
-}
-
-
-
 // Стили для табов
 .tabs {
 	display: block;
@@ -111,7 +44,7 @@
 	position: relative;
 	z-index: 2;
 	height: 30rem;
-	margin: 9.5rem 0;
+	padding: 9.5rem 0;
 
 	.block{
 		display: inline-block;
