--- a/css/_mainScreen.less
+++ b/css/_mainScreen.less
@@ -1,10 +1,10 @@
 .slider{
     width: 100%;
-    height: 103rem;
+    height: 117vh;
     max-width: 100%;
     color: @white;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
 
     .shaped{
         width: 100%;
@@ -31,12 +31,12 @@
 
     .treangle{
         width: 63rem;
-        height: 16rem;
+        min-height: 16rem;
         background: @blue;
         shape-outside: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
         clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
         position: absolute;
-        top: 85.3rem;
+        top: 96vh;
         right: 0;
         z-index: -999;
 
@@ -57,7 +57,7 @@
         position: absolute;
         left: 50%;
         margin-left: -35.5rem;
-        top: 23rem;
+        top: 23vh;
 
         h3{
             text-transform: uppercase;
@@ -82,7 +82,7 @@
     .mouse {
         border: 3px solid @white;
         border-radius: 23px;
-        bottom: 20rem;
+        bottom: 20vh;
         display: block;
         height: 67px;
         left: 50%;
