--- a/css/style.less
+++ b/css/style.less
@@ -2,20 +2,24 @@
 
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,300);
 
-.lato(){
+.lato() {
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 }
 
-.latoBold(){
+.latoBold() {
 	font-family: 'Lato', sans-serif;
 	font-weight: 600;
 }
 
-.latoIt(){
+.latoIt() {
 	font-family: 'Lato', sans-serif;
 	font-style: italic;;
 	font-weight: 300;
+}
+
+.box-shadow(@color: @text-gray;) {
+	box-shadow: 0px 2px 9px -3px @color;
 }
 
 @white: #fff;
@@ -25,6 +29,7 @@
 @light-gray: #eaeaea;
 @back-gray: #f7f7f7;
 @text-gray: #999999;
+@gray6: #666;
 
 html{
 	font-size: 62.5%;
@@ -35,9 +40,74 @@ html{
 	padding: 0;
 }
 
+.content_block{
+	padding-top: 13rem;
+	padding-bottom: 5rem;
+
+	.tit{
+		display: block;
+		max-width: 90%;
+		margin: 0 auto;
+
+		&:after{
+			content: "";
+			display: block;
+			width: 100%;
+			clear: both;
+		}
+
+		h1{
+			.latoBold;
+			font-size: 3rem;
+			text-transform: uppercase;
+			color: @blue;
+			margin: 0;
+
+			i{
+				color: @orange;
+				font-style: normal;
+			}
+		}
+
+		p{
+			.lato;
+			font-size: 1.8rem;
+			color: @gray6;
+			font-style: italic;
+		}
+
+		.descript{
+			display: inline-block;
+			margin-left: 7rem;
+			vertical-align: text-top;
+			float: right;
+			max-width: 60rem;
+			box-sizing: border-box;
+
+			img{
+				margin-right: 3rem;
+				float: left;
+				position: relative;
+	    		top: -5rem;
+			}
+
+			p{
+				.lato;
+				font-style: normal;
+				font-size: 1.6rem;
+				line-height: 125%;
+			}
+		}
+	}
+}
+
 @import url(_header.less);
 @import url(_mainScreen.less);
 @import url(_about.less);
 @import url(_skils.less);
+@import url(_team.less);
+@import url(_service.less);
+@import url(_fun.less);
+@import url(_works.less);
 
 
