--- a/code/parts/_works.jade
+++ b/code/parts/_works.jade
@@ -34,3 +34,49 @@
 			h2 Lorem ipsum
 			p Donec molestie, faucibus a amet commodo scelerisque libero massa. Sapien quam in eu vel nulla.
 			a(href="#works") view case study
+
+	.work-gallery
+		.shaped
+		h1 Additional Recent Work
+		p.under-title.
+			Market-proven software with award winning design
+		nav
+			a(href="") All
+			a(href="") Websites
+			a(href="") Graphic
+			a(href="") Identity
+			a(href="") Mobile apps
+
+		.gallery-block
+			.pic
+				.img
+				h3 Outfield
+				p Mobile interaction CRM for field reps
+			.pic
+				.img
+				h3 Outfield
+				p Mobile interaction CRM for field reps
+			.pic
+				.img
+				h3 Outfield
+				p Mobile interaction CRM for field reps
+			.pic
+				.img
+				h3 Outfield
+				p Mobile interaction CRM for field reps
+			.pic
+				.img
+				h3 Outfield
+				p Mobile interaction CRM for field reps
+			.pic
+				.img
+				h3 Outfield
+				p Mobile interaction CRM for field reps
+
+
+
+
+
+
+
+
