Стили для блока с галереей работ

--- a/code/parts/_works.jade
+++ b/code/parts/_works.jade
@@ -41,11 +41,11 @@
 		p.under-title.
 			Market-proven software with award winning design
 		nav
-			a(href="") All
-			a(href="") Websites
-			a(href="") Graphic
-			a(href="") Identity
-			a(href="") Mobile apps
+			a(href="#works").active All
+			a(href="#works") Websites
+			a(href="#works") Graphic
+			a(href="#works") Identity
+			a(href="#works") Mobile apps
 
 		.gallery-block
 			.pic
@@ -73,7 +73,8 @@
 				h3 Outfield
 				p Mobile interaction CRM for field reps
 
-
+		button.
+			load more
 
 
 
