--- a/code/index.jade
+++ b/code/index.jade
@@ -11,5 +11,6 @@ html(lang="ru")
 		include parts/_service
 		include parts/_fun
 		include parts/_works
+		include parts/_twitter
 		//- include parts/_body
 		include parts/_footer
