--- a/css/style.css
+++ b/css/style.css
@@ -1542,44 +1542,34 @@ header nav ul li a:hover
 }
 .works .work-gallery
 {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display:         flex;
-            flex-direction: column;
+    position: relative;
+
+    overflow: visible;
+
+    width: 100%;
+    max-width: 100%;
+    height: 135rem;
+
+    text-align: center;
 
     border-top: 1px solid #f1f1f1;
-
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-    -webkit-justify-content: space-around;
-    -ms-flex-pack: distribute;
-            justify-content: space-around;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-            align-items: center;
-    -webkit-align-content: space-between;
-    -ms-flex-line-pack: justify;
-            align-content: space-between;
 }
 .works .work-gallery .shaped
 {
     position: absolute;
     z-index: -999;
+    top: 0;
 
     box-sizing: border-box;
     width: 100%;
-    height: 135rem;
+    height: 100%;
 
     background: #f7f7f7;
 
-    -webkit-shape-outside: polygon(0 0, 100% 0, 100% 83%, 0 100%);
-            shape-outside: polygon(0 0, 100% 0, 100% 83%, 0 100%);
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 83%, 0 100%);
-            clip-path: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+    -webkit-shape-outside: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+            shape-outside: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 }
 .works .work-gallery h1
 {
@@ -1742,4 +1732,162 @@ header nav ul li a:hover
 {
     border-right: 1px solid #0cf;
     border-bottom: 2px solid #0cf;
+}
+.twitter
+{
+    position: relative;
+
+    overflow: visible;
+
+    width: 100%;
+    max-width: 100%;
+    height: 83rem;
+    padding-bottom: 0;
+}
+.twitter .shaped
+{
+    position: absolute;
+    z-index: -1000;
+    top: -17rem;
+
+    float: left;
+    float: right;
+
+    width: 100%;
+    height: 100%;
+
+    background: url(../img/team.jpg) no-repeat center top;
+    background-size: cover;
+
+    -webkit-shape-outside: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+            shape-outside: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+            clip-path: polygon(0 0, 100% 0, 100% 83%, 0 100%);
+}
+.twitter .shaped:after
+{
+    display: block;
+
+    width: 100%;
+    height: 100%;
+
+    content: '';
+
+    background: rgba(51, 51, 51, .9);
+    background-size: .5rem .5rem;
+}
+.twitter .treangle
+{
+    position: absolute;
+    z-index: -1009;
+    right: 0;
+    bottom: 16rem;
+
+    width: 63rem;
+    min-height: 16rem;
+
+    background: #0cf;
+
+    -webkit-shape-outside: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
+            shape-outside: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
+    -webkit-clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
+            clip-path: polygon(0% 35%, 100% 0%, 100% 100%, 30% 55%);
+}
+.twitter .treangle:after
+{
+    display: block;
+    clear: both;
+
+    width: 100%;
+
+    content: ' ';
+}
+.twitter .twitter-block
+{
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display:         flex;
+            flex-direction: column;
+
+    width: 100%;
+    padding-top: 8rem;
+
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+    -webkit-justify-content: space-around;
+    -ms-flex-pack: distribute;
+            justify-content: space-around;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+            align-items: center;
+}
+.twitter .twitter-block .big-icon
+{
+    width: 10rem;
+    height: 10rem;
+
+    background: url(../img/icons/twitter-logo.png) no-repeat center;
+}
+.twitter .twitter-block p
+{
+    font-family: 'Lato', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 300;
+
+    max-width: 81rem;
+    max-height: 20rem;
+    margin: 9rem auto;
+
+    text-align: center;
+
+    color: #fff;
+}
+.twitter .twitter-block .dots
+{
+    display: block;
+}
+.twitter .twitter-block .dots li
+{
+    display: inline-block;
+
+    width: 1rem;
+    height: 1rem;
+    margin: 0 .2rem;
+
+    cursor: pointer;
+
+    border-radius: 50%;
+    background: #ccc;
+}
+.twitter .twitter-block .dots .active
+{
+    background: #999;
+}
+.twitter .twitter-block .underblock
+{
+    font-size: 2.2rem;
+
+    margin: 3rem auto;
+}
+.twitter .twitter-block .underblock a
+{
+    text-decoration: none;
+
+    color: #0cf;
+}
+.twitter .twitter-block .underblock a:hover,
+.twitter .twitter-block .underblock a:active
+{
+    border-bottom: 1px solid #0cf;
+}
+.twitter .twitter-block .underblock a:visited
+{
+    color: #00a3cc;
 }
