--- a/css/style.less
+++ b/css/style.less
@@ -28,7 +28,7 @@
 @gray: #333;
 @light-gray: #eaeaea;
 @back-gray: #f7f7f7;
-@text-gray: #999999;
+@text-gray: #999;
 @gray6: #666;
 
 html{
@@ -109,5 +109,6 @@ html{
 @import url(_service.less);
 @import url(_fun.less);
 @import url(_works.less);
+@import url(_twitter.less);
 
 
