--- a/css/style.less
+++ b/css/style.less
@@ -46,7 +46,7 @@ html{
 
 	.tit{
 		display: block;
-		max-width: 90%;
+		max-width: 96rem;
 		margin: 0 auto;
 
 		&:after{
@@ -110,5 +110,7 @@ html{
 @import url(_fun.less);
 @import url(_works.less);
 @import url(_twitter.less);
+@import url(_testimonial.less);
+
 
 
