--- a/code/index.jade
+++ b/code/index.jade
@@ -12,5 +12,6 @@ html(lang="ru")
 		include parts/_fun
 		include parts/_works
 		include parts/_twitter
+		include parts/_testimonial
 		//- include parts/_body
 		include parts/_footer
